--- a/index.html
+++ b/index.html
@@ -95,10 +95,9 @@
     <h1>Mr. Crypto Hunter</h1>
     <p class="bio">Cripto Boy, bora caçar airdrops e oportunidades! 🚀</p>
     <a href="https://tiktok.com/@mrcryptohunter" class="link-button">TikTok</a>
-    <a href="https://youtube.com/@mrcryptohunter" class="link-button">YouTube</a>
-    <a href="https://x.com/mrcryptohunter" class="link-button">X Threads</a>
-    <a href="https://t.me/mrcryptohunter" class="link-button">Telegram</a>
-    <a href="https://discord.gg/mrcryptohunter" class="link-button">Discord</a>
+    <a href="https://www.youtube.com/channel/UCBrz3OP99pvxRB7FiAcmcjw" class="link-button">YouTube</a>
+    <a href="https://x.com/MrCripto_hunter" class="link-button">X Threads</a>
+    <a href="https://t.me/mrcriptohunteroficial" class="link-button">Telegram</a>
     <a href="referrals.html" class="link-button">Meus Referrals</a>
     <p class="footer">Siga para dicas de cripto e airdrops! #CriptoVida</p>
   </div>
