--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <a href="https://www.youtube.com/channel/UCBrz3OP99pvxRB7FiAcmcjw" class="link-button">YouTube</a>
     <a href="https://x.com/MrCripto_hunter" class="link-button">X Threads</a>
     <a href="https://t.me/mrcriptohunteroficial" class="link-button">Telegram</a>
-    <a href="referrals.html" class="link-button">Meus Referrals</a>
+    <a href="referrals.html" class="link-button">Airdrops Mr.CriptoHunter</a>
     <p class="footer">Siga para dicas de cripto e airdrops! #CriptoVida</p>
   </div>
 </body>
